# nebula-multirobot-dataset-ros2

./: LICENSE  README.md  nebula_multirobot_processor.py
odom_groundtruth/: README.md  ku_husky4.txt  prelim2_husky3.txt  prelim2_spot1.txt  prelim2_spot3.txt  prelim2_spot4.txt  urban_husky4.txt  urban_spot1.txt
pose_graph_msgs/: CMakeLists.txt  README.md  package.xml
pose_graph_msgs/msg/: LoopCandidate.msg  LoopCandidateArray.msg  LoopComputationStatus.msg  MapInfo.msg  PoseAndScan.msg  PoseGraph.msg  PoseGraphNode.msg
