<?xml version="1.0"?>
<package format="3">
  <name>pose_graph_msgs</name>
  <version>0.0.1</version>
  <description>The pose_graph_msgs package</description>

  <maintainer email="eanelson@eecs.berkeley.edu">Erik Nelson</maintainer>
  <license>GPLv2</license>

  <!-- <buildtool_depend>catkin</buildtool_depend> -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- message dependencies -->
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
